[gd_scene load_steps=5 format=3 uid="uid://b2b5f3ejhqp35"]

[ext_resource type="Script" uid="uid://btrxdnasph4pi" path="res://scripts/menu/game_overlay.gd" id="1_pobaf"]
[ext_resource type="PackedScene" uid="uid://dh0xqsvmtokbh" path="res://scenes/menu/PauseScreen.tscn" id="2_886vj"]
[ext_resource type="Texture2D" uid="uid://bhrcs34u8qeqj" path="res://assets/rulebook-icon.png" id="3_ee4yq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buhkf"]
bg_color = Color(0.470588, 0.741176, 0.282353, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_pobaf")

[node name="ScreenController" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PauseMenu" parent="ScreenController" instance=ExtResource("2_886vj")]
layout_mode = 1
offset_top = 658.0
offset_bottom = 658.0
mouse_filter = 1

[node name="ReferenceRect" type="ReferenceRect" parent="ScreenController"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
border_width = 3.0

[node name="MarginContainer" type="MarginContainer" parent="ScreenController/ReferenceRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="DebugMenu" type="Panel" parent="ScreenController/ReferenceRect/MarginContainer"]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="ScreenController/ReferenceRect/MarginContainer/DebugMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PiecePlacementList" type="ItemList" parent="ScreenController/ReferenceRect/MarginContainer/DebugMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="BoxContainer" type="BoxContainer" parent="ScreenController/ReferenceRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Debug" type="Button" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_buhkf")
toggle_mode = true
text = "Debug"

[node name="PauseButton" type="Button" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_buhkf")
clip_text = true

[node name="BoxContainer" type="BoxContainer" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer/PauseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer/PauseButton/BoxContainer"]
custom_minimum_size = Vector2(8, 28)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ColorRect2" type="ColorRect" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer/PauseButton/BoxContainer"]
custom_minimum_size = Vector2(8, 28)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="RuleBookButton" type="Button" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer"]
z_index = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_buhkf")
clip_text = true
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer/RuleBookButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="ScreenController/ReferenceRect/MarginContainer/BoxContainer/RuleBookButton/MarginContainer"]
modulate = Color(100, 100, 100, 1)
layout_mode = 2
texture = ExtResource("3_ee4yq")
expand_mode = 1

[connection signal="leave_button_pressed" from="ScreenController/PauseMenu" to="." method="_on_pause_menu_leave_button_pressed"]
[connection signal="resume_button_pressed" from="ScreenController/PauseMenu" to="." method="_on_pause_menu_resume_button_pressed"]
[connection signal="item_selected" from="ScreenController/ReferenceRect/MarginContainer/DebugMenu/MarginContainer/PiecePlacementList" to="." method="_on_piece_placement_list_item_selected"]
[connection signal="toggled" from="ScreenController/ReferenceRect/MarginContainer/BoxContainer/Debug" to="." method="_on_debug_toggled"]
[connection signal="pressed" from="ScreenController/ReferenceRect/MarginContainer/BoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
